@@ -41,7 +41,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * A {@link LeafReader} over a lucene document that exposes doc values and stored fields.
@@ -83,7 +82,7 @@ class DocumentLeafReader extends LeafReader {
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.NUMERIC)
             .map(IndexableField::numericValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return numericDocValues(values);
     }
 
@@ -96,7 +95,7 @@ class DocumentLeafReader extends LeafReader {
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.BINARY)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return binaryDocValues(values);
     }
 
@@ -109,7 +108,7 @@ class DocumentLeafReader extends LeafReader {
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedDocValues(values);
     }
 
@@ -122,7 +121,7 @@ class DocumentLeafReader extends LeafReader {
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED_NUMERIC)
             .map(IndexableField::numericValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedNumericDocValues(values);
     }
 
@@ -135,7 +134,7 @@ class DocumentLeafReader extends LeafReader {
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED_SET)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedSetDocValues(values);
     }
 
@@ -146,7 +145,7 @@ class DocumentLeafReader extends LeafReader {
 
     @Override
     public void document(int docID, StoredFieldVisitor visitor) throws IOException {
-        List<IndexableField> fields = document.getFields().stream().filter(f -> f.fieldType().stored()).collect(Collectors.toList());
+        List<IndexableField> fields = document.getFields().stream().filter(f -> f.fieldType().stored()).toList();
         for (IndexableField field : fields) {
             FieldInfo fieldInfo = fieldInfo(field.name());
             if (visitor.needsField(fieldInfo) != StoredFieldVisitor.Status.YES) {
